---
source: src/codegen/tests/initialization_test/global_initializers.rs
expression: result
---
; ModuleID = '<internal>'
source_filename = "<internal>"
target datalayout = "[filtered]"
target triple = "[filtered]"

%MyFB = type { i16 }
%prg = type { %MyFB }

@x = global %MyFB { i16 77 }
@__MyFB__init = unnamed_addr constant %MyFB { i16 77 }
@prg_instance = global %prg { %MyFB { i16 77 } }

define void @MyFB(%MyFB* %0) {
entry:
  %this = alloca %MyFB*, align [filtered]
  store %MyFB* %0, %MyFB** %this, align [filtered]
  %x = getelementptr inbounds %MyFB, %MyFB* %0, i32 0, i32 0
  ret void
}

define void @prg(%prg* %0) {
entry:
  %x = getelementptr inbounds %prg, %prg* %0, i32 0, i32 0
  ret void
}
